--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/router": "17.0.7",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
+    "@capawesome/capacitor-file-picker": "^5.2.0",
     "@ionic/angular": "^7.4.3",
     "@maskito/angular": "^1.9.0",
     "@maskito/core": "^1.9.0",
@@ -89,4 +90,3 @@
     "typescript": "5.2.2"
   }
 }
-
