--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@angular-ru/cdk": "14.11.2",
     "@angular-ru/ngxs": "14.2.2",
     "@angular/animations": "17.0.7",
+    "@angular/cdk": "^17.1.0",
     "@angular/common": "17.0.7",
     "@angular/compiler": "17.0.7",
     "@angular/core": "17.0.7",
