--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "dependencies": {
     "@angular-ru/cdk": "14.11.2",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.0.7",
+    "@angular/animations": "17.1.1",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.0.7",
-    "@angular/compiler": "17.0.7",
-    "@angular/core": "17.0.7",
-    "@angular/forms": "17.0.7",
-    "@angular/platform-browser": "17.0.7",
-    "@angular/platform-browser-dynamic": "17.0.7",
-    "@angular/router": "17.0.7",
+    "@angular/common": "17.1.1",
+    "@angular/compiler": "17.1.1",
+    "@angular/core": "17.1.1",
+    "@angular/forms": "17.1.1",
+    "@angular/platform-browser": "17.1.1",
+    "@angular/platform-browser-dynamic": "17.1.1",
+    "@angular/router": "17.1.1",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
     "@ionic/angular": "^7.4.3",
-    "@maskito/angular": "^1.9.0",
-    "@maskito/core": "^1.9.0",
+    "@maskito/angular": "2.0.0",
+    "@maskito/core": "2.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@ngxs/form-plugin": "^3.8.1",
@@ -36,18 +36,18 @@
     "rxjs": "~7.8.1",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "0.14.2"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.7",
-    "@angular-devkit/core": "17.0.7",
-    "@angular-devkit/schematics": "17.0.7",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "17.0.7",
-    "@angular/compiler-cli": "17.0.7",
-    "@angular/language-service": "17.0.7",
+    "@angular-devkit/build-angular": "17.1.1",
+    "@angular-devkit/core": "17.1.1",
+    "@angular-devkit/schematics": "17.1.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "17.1.1",
+    "@angular/compiler-cli": "17.1.1",
+    "@angular/language-service": "17.1.1",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "17.2.8",
@@ -58,37 +58,38 @@
     "@nx/storybook": "17.2.8",
     "@nx/web": "17.2.8",
     "@nx/workspace": "17.2.8",
-    "@schematics/angular": "17.0.7",
-    "@storybook/addon-essentials": "7.6.6",
-    "@storybook/addon-interactions": "7.6.6",
-    "@storybook/angular": "7.6.6",
-    "@storybook/core-server": "7.6.6",
+    "@schematics/angular": "17.1.1",
+    "@storybook/addon-essentials": "7.6.10",
+    "@storybook/addon-interactions": "7.6.10",
+    "@storybook/angular": "7.6.10",
+    "@storybook/core-server": "7.6.10",
     "@storybook/jest": "0.2.3",
     "@storybook/test-runner": "0.16.0",
     "@storybook/testing-library": "0.2.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.10.4",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
+    "@types/node": "20.11.6",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
     "cypress": "^13.3.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "13.1.4",
+    "jest-preset-angular": "14.0.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "17.0.0",
+    "ng-packagr": "17.1.2",
     "nx": "17.2.8",
     "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
+    "postcss-import": "16.0.0",
     "postcss-preset-env": "^9.2.0",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
-    "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "ts-jest": "29.1.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   }
 }
+
