--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "scripts": {},
   "private": false,
   "dependencies": {
-    "@angular-ru/cdk": "14.11.2",
+    "@angular-ru/cdk": "15.0.1",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.1.1",
+    "@angular/animations": "17.1.3",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.1.1",
-    "@angular/compiler": "17.1.1",
-    "@angular/core": "17.1.1",
-    "@angular/forms": "17.1.1",
-    "@angular/platform-browser": "17.1.1",
-    "@angular/platform-browser-dynamic": "17.1.1",
-    "@angular/router": "17.1.1",
+    "@angular/common": "17.1.3",
+    "@angular/compiler": "17.1.3",
+    "@angular/core": "17.1.3",
+    "@angular/forms": "17.1.3",
+    "@angular/platform-browser": "17.1.3",
+    "@angular/platform-browser-dynamic": "17.1.3",
+    "@angular/router": "17.1.3",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
     "@ionic/angular": "^7.4.3",
-    "@maskito/angular": "2.0.0",
-    "@maskito/core": "2.0.0",
+    "@maskito/angular": "2.0.2",
+    "@maskito/core": "2.0.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@ngxs/form-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "17.3.1",
+    "@nx/angular": "18.0.4",
     "appwrite": "^13.0.1",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -39,39 +39,39 @@
     "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.1",
-    "@angular-devkit/core": "17.1.1",
-    "@angular-devkit/schematics": "17.1.1",
+    "@angular-devkit/build-angular": "17.1.3",
+    "@angular-devkit/core": "17.1.3",
+    "@angular-devkit/schematics": "17.1.3",
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
     "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "17.1.1",
-    "@angular/language-service": "17.1.1",
+    "@angular/compiler-cli": "17.1.3",
+    "@angular/language-service": "17.1.3",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "17.3.1",
-    "@nx/eslint": "17.3.1",
-    "@nx/eslint-plugin": "17.3.1",
-    "@nx/jest": "17.3.1",
-    "@nx/js": "17.3.1",
-    "@nx/storybook": "17.3.1",
-    "@nx/web": "17.3.1",
-    "@nx/workspace": "17.3.1",
-    "@schematics/angular": "17.1.1",
-    "@storybook/addon-essentials": "7.6.10",
-    "@storybook/addon-interactions": "7.6.10",
-    "@storybook/angular": "7.6.10",
-    "@storybook/core-server": "7.6.10",
+    "@nx/cypress": "18.0.4",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/storybook": "18.0.4",
+    "@nx/web": "18.0.4",
+    "@nx/workspace": "18.0.4",
+    "@schematics/angular": "17.1.3",
+    "@storybook/addon-essentials": "7.6.14",
+    "@storybook/addon-interactions": "7.6.14",
+    "@storybook/angular": "7.6.14",
+    "@storybook/core-server": "7.6.14",
     "@storybook/jest": "0.2.3",
     "@storybook/test-runner": "0.16.0",
     "@storybook/testing-library": "0.2.2",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
+    "@swc-node/register": "1.8.0",
+    "@swc/core": "1.4.1",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.11.11",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
+    "@types/node": "20.11.17",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.3.0",
     "eslint": "8.56.0",
@@ -79,10 +79,10 @@
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "14.0.0",
+    "jest-preset-angular": "14.0.2",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.1.2",
-    "nx": "17.3.1",
+    "nx": "18.0.4",
     "postcss": "^8.4.31",
     "postcss-import": "16.0.0",
     "postcss-preset-env": "^9.2.0",
