--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "scripts": {},
   "private": false,
   "dependencies": {
-    "@angular-ru/cdk": "15.0.1",
+    "@angular-ru/cdk": "15.1.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.1.3",
+    "@angular/animations": "17.2.1",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.1.3",
-    "@angular/compiler": "17.1.3",
-    "@angular/core": "17.1.3",
-    "@angular/forms": "17.1.3",
-    "@angular/platform-browser": "17.1.3",
-    "@angular/platform-browser-dynamic": "17.1.3",
-    "@angular/router": "17.1.3",
+    "@angular/common": "17.2.1",
+    "@angular/compiler": "17.2.1",
+    "@angular/core": "17.2.1",
+    "@angular/forms": "17.2.1",
+    "@angular/platform-browser": "17.2.1",
+    "@angular/platform-browser-dynamic": "17.2.1",
+    "@angular/router": "17.2.1",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
@@ -36,18 +36,18 @@
     "rxjs": "~7.8.1",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "0.14.3"
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.3",
-    "@angular-devkit/core": "17.1.3",
-    "@angular-devkit/schematics": "17.1.3",
+    "@angular-devkit/build-angular": "17.2.0",
+    "@angular-devkit/core": "17.2.0",
+    "@angular-devkit/schematics": "17.2.0",
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "17.1.3",
-    "@angular/language-service": "17.1.3",
+    "@angular/cli": "17.2.0",
+    "@angular/compiler-cli": "17.2.1",
+    "@angular/language-service": "17.2.1",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "18.0.4",
@@ -58,20 +58,20 @@
     "@nx/storybook": "18.0.4",
     "@nx/web": "18.0.4",
     "@nx/workspace": "18.0.4",
-    "@schematics/angular": "17.1.3",
-    "@storybook/addon-essentials": "7.6.14",
-    "@storybook/addon-interactions": "7.6.14",
-    "@storybook/angular": "7.6.14",
-    "@storybook/core-server": "7.6.14",
+    "@schematics/angular": "17.2.0",
+    "@storybook/addon-essentials": "7.6.16",
+    "@storybook/addon-interactions": "7.6.16",
+    "@storybook/angular": "7.6.16",
+    "@storybook/core-server": "7.6.16",
     "@storybook/jest": "0.2.3",
     "@storybook/test-runner": "0.16.0",
     "@storybook/testing-library": "0.2.2",
     "@swc-node/register": "1.8.0",
-    "@swc/core": "1.4.1",
+    "@swc/core": "1.4.2",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.11.17",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@types/node": "20.11.19",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.3.0",
     "eslint": "8.56.0",
@@ -79,12 +79,12 @@
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "14.0.2",
+    "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "17.1.2",
+    "ng-packagr": "17.2.0",
     "nx": "18.0.4",
     "postcss": "^8.4.31",
-    "postcss-import": "16.0.0",
+    "postcss-import": "16.0.1",
     "postcss-preset-env": "^9.2.0",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
