--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "18.0.5",
+    "@nx/angular": "18.1.0",
     "appwrite": "^13.0.1",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -45,19 +45,19 @@
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "17.2.0",
+    "@angular/cli": "~17.2.0",
     "@angular/compiler-cli": "17.2.1",
     "@angular/language-service": "17.2.1",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "18.0.5",
-    "@nx/eslint": "18.0.5",
-    "@nx/eslint-plugin": "18.0.5",
-    "@nx/jest": "18.0.5",
-    "@nx/js": "18.0.5",
-    "@nx/storybook": "18.0.5",
-    "@nx/web": "18.0.5",
-    "@nx/workspace": "18.0.5",
+    "@nx/cypress": "18.1.0",
+    "@nx/eslint": "18.1.0",
+    "@nx/eslint-plugin": "18.1.0",
+    "@nx/jest": "18.1.0",
+    "@nx/js": "18.1.0",
+    "@nx/storybook": "18.1.0",
+    "@nx/web": "18.1.0",
+    "@nx/workspace": "18.1.0",
     "@schematics/angular": "17.2.0",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-interactions": "7.6.17",
@@ -73,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "autoprefixer": "^10.4.0",
-    "cypress": "^13.3.0",
+    "cypress": "^13.6.6",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
@@ -82,7 +82,7 @@
     "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.2.0",
-    "nx": "18.0.5",
+    "nx": "18.1.0",
     "postcss": "^8.4.31",
     "postcss-import": "16.0.1",
     "postcss-preset-env": "^9.2.0",
@@ -93,4 +93,3 @@
     "typescript": "5.3.3"
   }
 }
-
