--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
   "dependencies": {
     "@angular-ru/cdk": "15.1.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.2.1",
+    "@angular/animations": "17.3.1",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.2.1",
-    "@angular/compiler": "17.2.1",
-    "@angular/core": "17.2.1",
-    "@angular/forms": "17.2.1",
-    "@angular/platform-browser": "17.2.1",
-    "@angular/platform-browser-dynamic": "17.2.1",
-    "@angular/router": "17.2.1",
+    "@angular/common": "17.3.1",
+    "@angular/compiler": "17.3.1",
+    "@angular/core": "17.3.1",
+    "@angular/forms": "17.3.1",
+    "@angular/platform-browser": "17.3.1",
+    "@angular/platform-browser-dynamic": "17.3.1",
+    "@angular/router": "17.3.1",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
     "@ionic/angular": "^7.4.3",
-    "@maskito/angular": "2.0.2",
-    "@maskito/core": "2.0.2",
+    "@maskito/angular": "2.2.0",
+    "@maskito/core": "2.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@ngxs/form-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "18.0.8",
-    "appwrite": "^13.0.1",
+    "@nx/angular": "18.1.2",
+    "appwrite": "14.0.0",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,58 +39,58 @@
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.2.0",
-    "@angular-devkit/core": "17.2.0",
-    "@angular-devkit/schematics": "17.2.0",
-    "@angular-eslint/eslint-plugin": "17.2.1",
-    "@angular-eslint/eslint-plugin-template": "17.2.1",
-    "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "~17.2.0",
-    "@angular/compiler-cli": "17.2.1",
-    "@angular/language-service": "17.2.1",
+    "@angular-devkit/build-angular": "17.3.1",
+    "@angular-devkit/core": "17.3.1",
+    "@angular-devkit/schematics": "17.3.1",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "17.3.1",
+    "@angular/compiler-cli": "17.3.1",
+    "@angular/language-service": "17.3.1",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "18.0.8",
-    "@nx/eslint": "18.0.8",
-    "@nx/eslint-plugin": "18.0.8",
-    "@nx/jest": "18.0.8",
-    "@nx/js": "18.0.8",
-    "@nx/storybook": "18.0.8",
-    "@nx/web": "18.0.8",
-    "@nx/workspace": "18.0.8",
-    "@schematics/angular": "17.2.0",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "7.6.17",
-    "@storybook/angular": "7.6.17",
-    "@storybook/core-server": "7.6.17",
+    "@nx/cypress": "18.1.2",
+    "@nx/eslint": "18.1.2",
+    "@nx/eslint-plugin": "18.1.2",
+    "@nx/jest": "18.1.2",
+    "@nx/js": "18.1.2",
+    "@nx/storybook": "18.1.2",
+    "@nx/web": "18.1.2",
+    "@nx/workspace": "18.1.2",
+    "@schematics/angular": "17.3.1",
+    "@storybook/addon-essentials": "8.0.4",
+    "@storybook/addon-interactions": "8.0.4",
+    "@storybook/angular": "8.0.4",
+    "@storybook/core-server": "8.0.4",
     "@storybook/jest": "0.2.3",
-    "@storybook/test-runner": "0.16.0",
+    "@storybook/test-runner": "0.17.0",
     "@storybook/testing-library": "0.2.2",
-    "@swc-node/register": "1.8.0",
-    "@swc/core": "1.4.2",
+    "@swc-node/register": "1.9.0",
+    "@swc/core": "1.4.8",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.11.19",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
+    "@types/node": "20.11.30",
+    "@typescript-eslint/eslint-plugin": "7.3.1",
+    "@typescript-eslint/parser": "7.3.1",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.6.6",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "17.2.0",
-    "nx": "18.0.8",
+    "ng-packagr": "17.3.0",
+    "nx": "18.1.2",
     "postcss": "^8.4.31",
-    "postcss-import": "16.0.1",
+    "postcss-import": "16.1.0",
     "postcss-preset-env": "^9.2.0",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3"
+    "typescript": "5.4.3"
   }
 }
 
