--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "@angular-ru/cdk": "15.1.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.3.1",
+    "@angular/animations": "17.3.2",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.3.1",
-    "@angular/compiler": "17.3.1",
-    "@angular/core": "17.3.1",
-    "@angular/forms": "17.3.1",
-    "@angular/platform-browser": "17.3.1",
-    "@angular/platform-browser-dynamic": "17.3.1",
-    "@angular/router": "17.3.1",
+    "@angular/common": "17.3.2",
+    "@angular/compiler": "17.3.2",
+    "@angular/core": "17.3.2",
+    "@angular/forms": "17.3.2",
+    "@angular/platform-browser": "17.3.2",
+    "@angular/platform-browser-dynamic": "17.3.2",
+    "@angular/router": "17.3.2",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
@@ -28,7 +28,7 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "18.1.3",
+    "@nx/angular": "18.2.1",
     "appwrite": "14.0.0",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -45,19 +45,19 @@
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "17.3.2",
-    "@angular/compiler-cli": "17.3.1",
-    "@angular/language-service": "17.3.1",
+    "@angular/cli": "~17.3.0",
+    "@angular/compiler-cli": "17.3.2",
+    "@angular/language-service": "17.3.2",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "18.1.3",
-    "@nx/eslint": "18.1.3",
-    "@nx/eslint-plugin": "18.1.3",
-    "@nx/jest": "18.1.3",
-    "@nx/js": "18.1.3",
-    "@nx/storybook": "18.1.3",
-    "@nx/web": "18.1.3",
-    "@nx/workspace": "18.1.3",
+    "@nx/cypress": "18.2.1",
+    "@nx/eslint": "18.2.1",
+    "@nx/eslint-plugin": "18.2.1",
+    "@nx/jest": "18.2.1",
+    "@nx/js": "18.2.1",
+    "@nx/storybook": "18.2.1",
+    "@nx/web": "18.2.1",
+    "@nx/workspace": "18.2.1",
     "@schematics/angular": "17.3.2",
     "@storybook/addon-essentials": "8.0.4",
     "@storybook/addon-interactions": "8.0.4",
@@ -69,9 +69,9 @@
     "@swc-node/register": "1.9.0",
     "@swc/core": "1.4.11",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.11.30",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@types/node": "20.12.2",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.6.6",
     "eslint": "8.57.0",
@@ -82,7 +82,7 @@
     "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.3.0",
-    "nx": "18.1.3",
+    "nx": "18.2.1",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "^9.2.0",
