--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "dependencies": {
     "@angular-ru/cdk": "15.2.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.3.4",
+    "@angular/animations": "17.3.6",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.3.4",
-    "@angular/compiler": "17.3.4",
-    "@angular/core": "17.3.4",
-    "@angular/forms": "17.3.4",
-    "@angular/platform-browser": "17.3.4",
-    "@angular/platform-browser-dynamic": "17.3.4",
-    "@angular/router": "17.3.4",
+    "@angular/common": "17.3.6",
+    "@angular/compiler": "17.3.6",
+    "@angular/core": "17.3.6",
+    "@angular/forms": "17.3.6",
+    "@angular/platform-browser": "17.3.6",
+    "@angular/platform-browser-dynamic": "17.3.6",
+    "@angular/router": "17.3.6",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-file-picker": "^5.2.0",
-    "@ionic/angular": "^7.4.3",
+    "@ionic/angular": "8.0.1",
     "@maskito/angular": "2.2.0",
     "@maskito/core": "2.2.0",
     "@ngx-translate/core": "^15.0.0",
@@ -28,8 +28,8 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "18.2.4",
-    "appwrite": "14.0.0",
+    "@nx/angular": "18.3.4",
+    "appwrite": "14.0.1",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,18 +46,18 @@
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "17.3.4",
-    "@angular/language-service": "17.3.4",
+    "@angular/compiler-cli": "17.3.6",
+    "@angular/language-service": "17.3.6",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "18.2.4",
-    "@nx/eslint": "18.2.4",
-    "@nx/eslint-plugin": "18.2.4",
-    "@nx/jest": "18.2.4",
-    "@nx/js": "18.2.4",
-    "@nx/storybook": "18.2.4",
-    "@nx/web": "18.2.4",
-    "@nx/workspace": "18.2.4",
+    "@nx/cypress": "18.3.4",
+    "@nx/eslint": "18.3.4",
+    "@nx/eslint-plugin": "18.3.4",
+    "@nx/jest": "18.3.4",
+    "@nx/js": "18.3.4",
+    "@nx/storybook": "18.3.4",
+    "@nx/web": "18.3.4",
+    "@nx/workspace": "18.3.4",
     "@schematics/angular": "17.3.4",
     "@storybook/addon-essentials": "8.0.8",
     "@storybook/addon-interactions": "8.0.8",
@@ -82,7 +82,7 @@
     "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.3.0",
-    "nx": "18.2.4",
+    "nx": "18.3.4",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "^9.2.0",
