--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "dependencies": {
     "@angular-ru/cdk": "15.2.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.3.6",
+    "@angular/animations": "17.3.7",
     "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.3.6",
-    "@angular/compiler": "17.3.6",
-    "@angular/core": "17.3.6",
-    "@angular/forms": "17.3.6",
-    "@angular/platform-browser": "17.3.6",
-    "@angular/platform-browser-dynamic": "17.3.6",
-    "@angular/router": "17.3.6",
-    "@capacitor/app": "^5.0.6",
-    "@capacitor/core": "^5.4.2",
-    "@capawesome/capacitor-file-picker": "^5.2.0",
-    "@ionic/angular": "8.0.1",
+    "@angular/common": "17.3.7",
+    "@angular/compiler": "17.3.7",
+    "@angular/core": "17.3.7",
+    "@angular/forms": "17.3.7",
+    "@angular/platform-browser": "17.3.7",
+    "@angular/platform-browser-dynamic": "17.3.7",
+    "@angular/router": "17.3.7",
+    "@capacitor/app": "6.0.0",
+    "@capacitor/core": "6.0.0",
+    "@capawesome/capacitor-file-picker": "6.0.0",
+    "@ionic/angular": "8.1.0",
     "@maskito/angular": "2.2.0",
     "@maskito/core": "2.2.0",
     "@ngx-translate/core": "^15.0.0",
@@ -39,15 +39,15 @@
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.4",
-    "@angular-devkit/core": "17.3.4",
-    "@angular-devkit/schematics": "17.3.4",
+    "@angular-devkit/build-angular": "17.3.6",
+    "@angular-devkit/core": "17.3.6",
+    "@angular-devkit/schematics": "17.3.6",
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "17.3.6",
-    "@angular/language-service": "17.3.6",
+    "@angular/compiler-cli": "17.3.7",
+    "@angular/language-service": "17.3.7",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "18.3.4",
@@ -58,7 +58,7 @@
     "@nx/storybook": "18.3.4",
     "@nx/web": "18.3.4",
     "@nx/workspace": "18.3.4",
-    "@schematics/angular": "17.3.4",
+    "@schematics/angular": "17.3.6",
     "@storybook/addon-essentials": "8.0.8",
     "@storybook/addon-interactions": "8.0.8",
     "@storybook/angular": "8.0.8",
