--- a/package.json
+++ b/package.json
@@ -7,90 +7,90 @@
   "dependencies": {
     "@angular-ru/cdk": "15.2.0",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.3.9",
-    "@angular/cdk": "^17.1.0",
-    "@angular/common": "17.3.9",
-    "@angular/compiler": "17.3.9",
-    "@angular/core": "17.3.9",
-    "@angular/forms": "17.3.9",
-    "@angular/platform-browser": "17.3.9",
-    "@angular/platform-browser-dynamic": "17.3.9",
-    "@angular/router": "17.3.9",
+    "@angular/animations": "18.0.3",
+    "@angular/cdk": "18.0.3",
+    "@angular/common": "18.0.3",
+    "@angular/compiler": "18.0.3",
+    "@angular/core": "18.0.3",
+    "@angular/forms": "18.0.3",
+    "@angular/platform-browser": "18.0.3",
+    "@angular/platform-browser-dynamic": "18.0.3",
+    "@angular/router": "18.0.3",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/core": "6.1.0",
     "@capawesome/capacitor-file-picker": "6.0.0",
-    "@ionic/angular": "8.1.2",
-    "@maskito/angular": "2.3.2",
-    "@maskito/core": "2.3.2",
+    "@ionic/angular": "8.2.2",
+    "@maskito/angular": "2.4.0",
+    "@maskito/core": "2.4.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "@ngxs/form-plugin": "^3.8.1",
-    "@ngxs/logger-plugin": "^3.8.1",
-    "@ngxs/router-plugin": "^3.8.1",
-    "@ngxs/store": "^3.8.1",
-    "@nx/angular": "19.0.4",
-    "appwrite": "14.0.1",
+    "@ngxs/form-plugin": "18.0.0",
+    "@ngxs/logger-plugin": "18.0.0",
+    "@ngxs/router-plugin": "18.0.0",
+    "@ngxs/store": "18.0.0",
+    "@nx/angular": "19.3.0",
+    "appwrite": "15.0.0",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.1",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "0.14.6"
+    "zone.js": "0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.7",
-    "@angular-devkit/core": "17.3.7",
-    "@angular-devkit/schematics": "17.3.7",
-    "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
-    "@angular-eslint/template-parser": "17.4.1",
-    "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "17.3.9",
-    "@angular/language-service": "17.3.9",
+    "@angular-devkit/build-angular": "18.0.4",
+    "@angular-devkit/core": "18.0.4",
+    "@angular-devkit/schematics": "18.0.4",
+    "@angular-eslint/eslint-plugin": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/template-parser": "18.0.1",
+    "@angular/cli": "~18.0.0",
+    "@angular/compiler-cli": "18.0.3",
+    "@angular/language-service": "18.0.3",
     "@compodoc/compodoc": "^1.1.24",
-    "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "19.0.4",
-    "@nx/eslint": "19.0.4",
-    "@nx/eslint-plugin": "19.0.4",
-    "@nx/jest": "19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/storybook": "19.0.4",
-    "@nx/web": "19.0.4",
-    "@nx/workspace": "19.0.4",
-    "@schematics/angular": "17.3.7",
-    "@storybook/addon-essentials": "8.1.1",
-    "@storybook/addon-interactions": "8.1.1",
-    "@storybook/angular": "8.1.1",
-    "@storybook/core-server": "8.1.1",
+    "@ngxs/devtools-plugin": "18.0.0",
+    "@nx/cypress": "19.3.0",
+    "@nx/eslint": "19.3.0",
+    "@nx/eslint-plugin": "19.3.0",
+    "@nx/jest": "19.3.0",
+    "@nx/js": "19.3.0",
+    "@nx/storybook": "19.3.0",
+    "@nx/web": "19.3.0",
+    "@nx/workspace": "19.3.0",
+    "@schematics/angular": "18.0.4",
+    "@storybook/addon-essentials": "8.1.10",
+    "@storybook/addon-interactions": "8.1.10",
+    "@storybook/angular": "8.1.10",
+    "@storybook/core-server": "8.1.10",
     "@storybook/jest": "0.2.3",
-    "@storybook/test-runner": "0.18.1",
+    "@storybook/test-runner": "0.18.2",
     "@storybook/testing-library": "0.2.2",
-    "@swc-node/register": "1.9.1",
-    "@swc/core": "1.5.7",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.6.1",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.12.12",
-    "@typescript-eslint/eslint-plugin": "7.10.0",
-    "@typescript-eslint/parser": "7.10.0",
+    "@types/node": "20.14.5",
+    "@typescript-eslint/eslint-plugin": "7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
+    "@typescript-eslint/utils": "7.13.1",
     "autoprefixer": "^10.4.0",
-    "cypress": "^13.6.6",
-    "eslint": "^8.0.0",
+    "cypress": "13.11.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "3.2.0",
+    "eslint-plugin-cypress": "3.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "14.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "17.3.0",
-    "nx": "19.0.4",
+    "ng-packagr": "18.0.0",
+    "nx": "19.3.0",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "^9.2.0",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
-    "ts-jest": "29.1.3",
+    "ts-jest": "29.1.5",
     "ts-node": "10.9.2",
     "typescript": "5.4.5"
   }
 }
-
